Sync Main (#3-#9)
* Introduction_adding

* Introduction_finished_uneditable

* Update HistoryPop.java

---------

新增：history功能 (#3)

* 新增：界面查看交易历史

* 新增：活期交易附加历史

新增：初始页设置密码 (#4)

Fix：jar访问文件时路径问题 (#5)

* fix: path

* fix: 对应测试操作

Feat：首次登陆检查 (#6)

* 新增：检查初次登陆

* typo

* Fix: fc flag setting

Emerg：Fix Test Case (#7)

* Fix: test case with new Admin

Feat: 增加自动化测试 (#8)

* Create maven.yml

* 无gui配置

* Update maven.yml

* Update maven.yml

* Update maven.yml

* Revert "无gui配置"

This reverts commit 49bb889d95a21b41320f0f286eee82a249eda1ef.

* Update maven.yml

* Update maven.yml

Co-Authored-By: pangxuan945 <102933048+pangxuan945@users.noreply.github.com>